--- a/app/admin/template/administrative/invoice/modal.manage_customer_contact.twig
+++ b/app/admin/template/administrative/invoice/modal.manage_customer_contact.twig
@@ -8,55 +8,55 @@
 		{% trans "Some fields were not filled in correctly" %}. {% trans "Please correct them" %}.
 	</div>
 
-	<form class="form-horizontal form-condensed" method="post" id="invoice-contact-form" onsubmit="return validate_invoice_contact();">
-		<input type="hidden" name="invoice_contact[customer_id]" id="customer_id" value="">
+	<form class="form-horizontal form-condensed" method="post" id="invoice-contact-form" onsubmit="return validate_customer_contact();">
+		<input type="hidden" name="customer_contact[customer_id]" id="customer_id" value="">
 
 		<div class="form-group{% if 'company' in errors|keys %} has-error{% endif %}">
 			<label for="company" class="control-label col-xs-3">{% trans "Company" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="invoice_contact[company]" id="company" class="form-control" value="">
+				<input type="text" name="customer_contact[company]" id="company" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'firstname' in errors|keys %} has-error{% endif %}">
 			<label for="firstname" class="control-label col-xs-3">{% trans "Firstname" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="invoice_contact[firstname]" id="firstname" class="form-control" value="">
+				<input type="text" name="customer_contact[firstname]" id="firstname" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'lastname' in errors|keys %} has-error{% endif %}">
 			<label for="lastname" class="control-label col-xs-3">{% trans "Lastname" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="invoice_contact[lastname]" id="lastname" class="form-control" value="">
+				<input type="text" name="customer_contact[lastname]" id="lastname" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'street' in errors|keys %} has-error{% endif %}">
 			<label for="street" class="control-label col-xs-3">{% trans "Street" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="invoice_contact[street]" id="street" class="form-control" value="">
+				<input type="text" name="customer_contact[street]" id="street" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'housenumber' in errors|keys %} has-error{% endif %}">
 			<label for="housenumber" class="control-label col-xs-3">{% trans "Housenumber" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="invoice_contact[housenumber]" id="housenumber" class="form-control" value="">
+				<input type="text" name="customer_contact[housenumber]" id="housenumber" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'city' in errors|keys %} has-error{% endif %}">
 			<label for="city" class="control-label col-xs-3">{% trans "City" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="invoice_contact[city]" id="city" class="form-control" value="">
+				<input type="text" name="customer_contact[city]" id="city" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'zipcode' in errors|keys %} has-error{% endif %}">
 			<label for="zipcode" class="control-label col-xs-3">{% trans "Zip code" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="invoice_contact[zipcode]" id="zipcode" class="form-control" value="">
+				<input type="text" name="customer_contact[zipcode]" id="zipcode" class="form-control" value="">
 			</div>
 
 		</div>
@@ -64,49 +64,49 @@
 		<div class="form-group"{% if 'country_id' in errors|keys %} has-error{% endif %}">
 			<label for="country_id" class="control-label col-xs-3">{% trans "Country" %}</label>
 			<div class="col-xs-9">
-				{{ form.select_country(countries, 'invoice_contact[country_id]', 'country_id', 0) }}
+				{{ form.select_country(countries, 'customer_contact[country_id]', 'country_id', 0) }}
 			</div>
 		</div>
 
 		<div class="form-group{% if 'email' in errors|keys %} has-error{% endif %}">
 			<label for="email" class="control-label col-xs-3">{% trans "Email" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="invoice_contact[email]" id="email" class="form-control" value="">
+				<input type="text" name="customer_contact[email]" id="email" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'phone' in errors|keys %} has-error{% endif %}">
 			<label for="phone" class="control-label col-xs-3">{% trans "Phone" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="invoice_contact[phone]" id="phone" class="form-control" value="">
+				<input type="text" name="customer_contact[phone]" id="phone" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'mobile' in errors|keys %} has-error{% endif %}">
 			<label for="mobile" class="control-label col-xs-3">{% trans "Mobile" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="invoice_contact[mobile]" id="mobile" class="form-control" value="">
+				<input type="text" name="customer_contact[mobile]" id="mobile" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'fax' in errors|keys %} has-error{% endif %}">
 			<label for="fax" class="control-label col-xs-3">{% trans "Fax" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="invoice_contact[fax]" id="fax" class="form-control" value="">
+				<input type="text" name="customer_contact[fax]" id="fax" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group{% if 'vat' in errors|keys %} has-error{% endif %}">
 			<label for="vat" class="control-label col-xs-3">{% trans "Vat" %}</label>
 			<div class="col-xs-9">
-				<input type="text" name="invoice_contact[vat]" id="vat" class="form-control" value="">
+				<input type="text" name="customer_contact[vat]" id="vat" class="form-control" value="">
 			</div>
 		</div>
 
 		<div class="form-group">
 			<label for="language_id" class="control-label col-xs-3">{% trans "Language" %}</label>
 			<div class="col-xs-9">
-				{{ form.select_language(languages, 'invoice_contact[language_id]', 'language_id', 0) }}
+				{{ form.select_language(languages, 'customer_contact[language_id]', 'language_id', 0) }}
 			</div>
 		</div>
 	</form>
@@ -118,13 +118,13 @@
 			$('#invoice-contact-form input, select').val('');
 			$('.form-group').removeClass('has-error');
 
-			current_invoice_contact_id = 0;
+			current_customer_contact_id = 0;
 
 			var $invoker = $(e.relatedTarget);
 			if($invoker.data('customer-contacts') == 0) {
 				load_customer_data($invoker.data('customer-id'));
 			} else if($invoker.data('invoice-contact-id')) {
-				load_invoice_contact_data($invoker.data('invoice-contact-id'));
+				load_customer_contact_data($invoker.data('invoice-contact-id'));
 			}
 
 			$('#invoice-contact-form #customer_id').val($invoker.data('customer-id'));
@@ -141,24 +141,24 @@
 			}, 'json');
 		}
 
-		function load_invoice_contact_data(id) {
-			$.get('/administrative/invoice/contact?action=load_invoice_contact&id=' + id, function(data) {
+		function load_customer_contact_data(id) {
+			$.get('/administrative/invoice/contact?action=load_customer_contact&id=' + id, function(data) {
 				$.each(data, function(key, value) {
 					if($('#invoice-contact-form #' + key).length == 1) {
 						$('#invoice-contact-form #' + key).val(value);
 					}
 				});
 
-				current_invoice_contact_id = id;
+				current_customer_contact_id = id;
 			}, 'json');
 		}
 
-		function validate_invoice_contact() {
+		function validate_customer_contact() {
 			data = $('#invoice-contact-form').serialize();
 
 			$('.form-group').removeClass('has-error');
 
-			$.post('/administrative/invoice/contact?action=manage&id=' + current_invoice_contact_id, data, function(data) {
+			$.post('/administrative/invoice/contact?action=manage&id=' + current_customer_contact_id, data, function(data) {
 				if ("id" in data) {
 					window.location = '/administrative/invoice?action=create_step2';
 				} else {
