--- a/app/admin/template/administrative/supplier.twig
+++ b/app/admin/template/administrative/supplier.twig
@@ -71,6 +71,13 @@
 					</div>
 
 					<div class="form-group">
+					    <label class="col-xs-3 control-label">{% trans "Comments" %}</label>
+					    <div class="col-xs-9">
+					        <textarea name="supplier[comment]" class="form-control">{{ supplier.comment }}</textarea>
+					    </div>
+					</div>
+
+					<div class="form-group">
 						<div class="col-xs-3 col-xs-offset-3">
 							<button class="btn btn-primary">
 								{% trans "Save" %}
@@ -144,6 +151,13 @@
 							<input type="text" name="supplier[vat]" id="vat" class="form-control" value="{{ env.post.supplier.vat }}">
 							{{ form.invalid_input('vat', errors) }}
 						</div>
+					</div>
+
+					<div class="form-group">
+					    <label class="col-xs-3 control-label">{% trans "Comments" %}</label>
+					    <div class="col-xs-9">
+					        <textarea name="supplier[comment]" class="form-control">{{ env.post.supplier.comment }}</textarea>
+					    </div>
 					</div>
 
 					<div class="form-group">
@@ -225,7 +239,7 @@
 						<td>{{ supplier.company }}</td>
 						<td>{{ supplier.city }}</td>
 						<td>{{ supplier.country.name }}</td>
-						<td>{{ supplier.vat }}</td>
+						<td>{{ supplier.get_vat_formatted() }}</td>
 						<td>
 							<a href="/administrative/supplier?action=edit&id={{ supplier.id }}" title="">
 								<span class="glyphicon glyphicon-pencil"></span>
