create 'Incoming' When mailscanner fetches a document, it gets split. Each page of the document can be used to create a new document

--- a/app/admin/template/_default/layout.base.twig
+++ b/app/admin/template/_default/layout.base.twig
@@ -10,18 +10,21 @@
 	<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" media="handheld, all">
 	<link rel="stylesheet" href="/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
 	<link rel="stylesheet" href="/bootstrap-multiselect/dist/css/bootstrap-multiselect.css" />
+	<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="/style.css" type="text/css" media="handheld, all">
 
 	<script type="text/javascript" src="/jquery/jquery.min.js"></script>
 	<script type="text/javascript" src="/bootstrap/dist/js/bootstrap.min.js"></script>
-	<script src="/moment/min/moment.min.js"></script>
-	<script src="/tigron-confirm-modal/js/bootstrap.confirm-modal.js"></script>
-	<script src="/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
-	<script src="/tigron-datetimepicker/js/tigron-datetimepicker.js"></script>
+	<script type="text/javascript" src="/moment/min/moment.min.js"></script>
+	<script type="text/javascript" src="/tigron-confirm-modal/js/bootstrap.confirm-modal.js"></script>
+	<script type="text/javascript" src="/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js"></script>
+	<script type="text/javascript" src="/tigron-datetimepicker/js/tigron-datetimepicker.js"></script>
 	<script type="text/javascript" src="/jquery-zoom/jquery.zoom.min.js"></script>
 	<script type="text/javascript" src="/handlebars/handlebars.min.js"></script>
 	<script type="text/javascript" src="/bootstrap-multiselect/dist/js/bootstrap-multiselect.js"></script>
 	<script type="text/javascript" src="/jquery.autogrow-textarea/jquery.autogrow-textarea.js"></script>
+	<script type="text/javascript" src="/jquery-ui/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="/bootstrap-checkbox/js/bootstrap-checkbox.js"></script>
 
 
 	{% spaceless %}
