--- a/app/admin/template/_default/nav_bar.twig
+++ b/app/admin/template/_default/nav_bar.twig
@@ -32,6 +32,7 @@
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">{% trans "Document Management" %} <b class="caret"></b></a>
 					<ul class="dropdown-menu">
+						<li {% if env.module.get_name() == 'administrative_incoming' %}class="active"{% endif %}><a href="/administrative/incoming">{% trans "Incoming" %}</a></li>
 						<li {% if env.module.get_name() == 'administrative_document' %}class="active"{% endif %}><a href="/administrative/document">{% trans "Documents" %}</a></li>
 						<li {% if env.module.get_name() == 'administrative_tag' %}class="active"{% endif %}><a href="/administrative/tag">{% trans "Tags" %}</a></li>
 					</ul>
