--- a/app/admin/template/administrative/purchase.twig
+++ b/app/admin/template/administrative/purchase.twig
@@ -92,9 +92,9 @@
 				</div>
 
 				<div class="form-group">
-					<label class="col-xs-3 control-label">{% trans "Paid date" %}</label>
+					<label class="col-xs-3 control-label">{% trans "Paid" %}</label>
 					<div class="col-xs-5">
-						<input type="text" class="form-control datepicker" name="purchase[paid]" value="{{ purchase.paid }}">
+						<input type="checkbox" name="purchase[paid]" id="paid" data-group-cls="btn-group-sm" {% if purchase.paid %}checked{% endif %}/>
 					</div>
 				</div>
 
@@ -284,7 +284,7 @@
 					<td>{{ purchase.supplier.company }}</td>
 					<td class="text-right">€{{ purchase.price_incl|number_format }}</td>
 					<td>
-					{% if not purchase.paid is empty %}
+					{% if purchase.paid %}
 						<span class="glyphicon glyphicon-ok" title="{{ purchase.paid|datetime }}"></span>
 					{% else %}
 						<span class="glyphicon glyphicon-remove"></span>
